@startuml
title Registry — Health Probe Class Model (Task 1.56)

interface ServiceHealthChecker <<application/port>> {
  + check(healthEndpoint: String): ServiceHealthStatus
}

class RestClientHealthChecker <<infrastructure/http>> implements ServiceHealthChecker {
  - restClient: RestClient
}

interface HealthEndpointValidator <<application/port>> {
  + validate(url: String): void
}

class DefaultHealthEndpointValidator <<infrastructure/validation>> implements HealthEndpointValidator {
  - allowHttp: boolean
}

interface ProbeServiceHealthUseCase <<application/usecase>> {
  + probeAll(): void
}

class ProbeServiceHealthUseCaseImpl <<application/usecase/impl>> implements ProbeServiceHealthUseCase {
  - serviceRepository: ServiceRepository
  - historyRepository: ServiceHistoryRepository
  - healthChecker: ServiceHealthChecker
  - advisoryLockRepository: AdvisoryLockRepository
  - objectMapper: ObjectMapper
  - HEALTH_PROBE_LOCK_KEY: long
}

interface AdvisoryLockRepository <<application/repository>> {
  + tryAcquireLock(key: long): boolean
  + releaseLock(key: long): void
}

class JdbcAdvisoryLockRepository <<infrastructure/jdbc>> implements AdvisoryLockRepository

class HealthProbeScheduler <<infrastructure/scheduled>> {
  - probeServiceHealthUseCase: ProbeServiceHealthUseCase
  + <<@Scheduled fixedDelay PT60S>> probe(): void
}

class SchedulingConfig <<config>> <<@Configuration @EnableScheduling>>

enum ServiceHealthStatus <<domain>> {
  HEALTHY
  DEGRADED
  UNHEALTHY
  PROBE_AUTH_FAILED
  UNKNOWN
}

HealthProbeScheduler --> ProbeServiceHealthUseCase
ProbeServiceHealthUseCaseImpl --> ServiceRepository
ProbeServiceHealthUseCaseImpl --> ServiceHealthChecker
ProbeServiceHealthUseCaseImpl --> AdvisoryLockRepository
ProbeServiceHealthUseCaseImpl --> ServiceHealthStatus
RestClientHealthChecker --> ServiceHealthStatus
@enduml
